<resources>
    <string name="app_name">BMIAndroidV1</string>
    <string name="height">Height:</string>
    <string name="weight">Weight:</string>
    <string name="bmi">Stats:</string>
    <string name="calculate">Calculate</string>
    <string name="clear">Clear</string>
    <string name="heighthint">Enter Height (12 - 96)</string>
    <string name="weighthint">Enter Weight (1 - 777)</string>
</resources>