<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gold"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="26dp"
        android:background="@color/green"
        android:text="@string/height"
        android:textColor="@color/gold" />

    <EditText
        android:id="@+id/editTextHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textViewHeight"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/heighthint"
        android:inputType="number"
        android:textColor="@color/green"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextHeight"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="34dp"
        android:background="@color/green"
        android:text="@string/weight"
        android:textColor="@color/gold" />

    <EditText
        android:id="@+id/editTextWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editTextHeight"
        android:layout_alignLeft="@+id/editTextHeight"
        android:layout_alignTop="@+id/textViewWeight"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/weighthint"
        android:inputType="number"
        android:textColor="@color/green"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewBMI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextWeight"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="33dp"
        android:background="@color/green"
        android:text="@string/bmi"
        android:textColor="@color/gold" />

    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textViewBMI"
        android:layout_alignStart="@+id/editTextWeight"
        android:layout_alignLeft="@+id/editTextWeight"
        android:layout_alignBottom="@+id/textViewBMI"
        android:gravity="center"
        android:lines="4"
        android:maxLines="4"
        android:textColor="@color/green"
        android:textSize="16sp" />

    <Button
        android:id="@+id/buttonCalculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewResult"
        android:layout_marginTop="22dp"
        android:onClick="calculateTheBMI"
        android:text="@string/calculate" />

    <Button
        android:id="@+id/buttonClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/buttonCalculate"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="47dp"
        android:layout_marginRight="47dp"
        android:onClick="clear"
        android:text="@string/clear" />

    <ImageView
        android:id="@+id/imageViewBMIImg"
        android:layout_width="323dp"
        android:layout_height="247dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="59dp"
        android:layout_marginLeft="59dp"
        android:layout_marginEnd="45dp"
        android:layout_marginRight="45dp"
        android:layout_marginBottom="30dp"
        android:scaleType="center"
        app:srcCompat="@drawable/bmicalculator"
        tools:srcCompat="@drawable/bmicalculator" />
</RelativeLayout>